resolving slider issues on iphone8

--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -73,7 +73,7 @@
         @include iphone8 {
             width: 80%;
             height: 150px;
-            margin: 15px 0;
+            margin: 10px 0;
           }
 
         .left {
@@ -93,6 +93,11 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+
+            @include iphone8 {
+                width: 150%;
+                height: 80%;
+              }
 
             
 
@@ -123,7 +128,7 @@
                 }
 
                 @include iphone8 {
-                    width: 5px;
+                    width: 15px;
                   }
               }
             }
@@ -179,6 +184,11 @@
           img {
             width: 400px;
             transform: rotate(-10deg);
+
+            @include iphone8 {
+                width: 100px;
+              }
+            
           }
         }
       }
