--- a/src/components/worktwo/worktwo.scss
+++ b/src/components/worktwo/worktwo.scss
@@ -82,6 +82,9 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          @include iphone8 {
+            flex: 6;
+          }
           
 
           .leftContainer {
@@ -90,6 +93,11 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+
+            @include iphone8 {
+                width: 150%;
+                height: 80%;
+              }
 
             
 
@@ -120,7 +128,7 @@
                 }
 
                 @include iphone8 {
-                    width: 10px;
+                    width: 15px;
                   }
               }
             }
@@ -167,11 +175,19 @@
           justify-content: center;
           overflow: hidden;
 
+          @include iphone8 {
+            flex: 6;
+          }
+
          
 
           img {
             width: 400px;
             transform: rotate(-10deg);
+
+            @include iphone8 {
+                width: 150px;
+              }
           }
         }
       }
